<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>

  <properties>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
  </properties>

  <groupId>com.snakebattle.patkovskyi</groupId>
  <artifactId>snakebattle-parent</artifactId>
  <version>0.1</version>

  <modules>
    <module>bot</module>
    <module>testinverter</module>
    <module>codenjoy/CodingDojo/games/snake-battle</module>
    <module>codenjoy/CodingDojo/games/engine</module>
  </modules>

</project>
